...
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .frame(maxWidth: 150)
            }
            .padding(20)
        }
            .navigationTitle("My Hobbies!")
    }
    
    
    private var saxophoneImage: Image {
        guard let imagePath = Bundle.module.path(forResource: "Saxophone", ofType: "jpg"),
            let image = UIImage(contentsOfFile: imagePath) else {
...
