...
                    .overlay {
                        Circle().stroke(.white, lineWidth: 4)
                    }
                    .shadow(radius: 7)
                Spacer()
                    .frame(height: 20)
                Text("Brooke Krajancich")
                    .font(.title)
                    .fontWeight(.black)
                    .foregroundColor(highlightColor)
                Text("PhD Student in EE")
                    .font(.headline)
                    .fontWeight(.medium)
...
